--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
 
-        <p>Hello world! This is Green-Systems Boilerplate.</p>
-
+      <script>
+        var socket = io.connect('http://localhost');
+        socket.on('news', function (data) {
+          console.log(data);
+          socket.emit('my other event', { my: 'data' });
+        });
+      </script>
     </body>
 </html>
