add express server to serve index file to it can be opened to the internet tru browser

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+      asd
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
 
       <script>
-        var socket = io.connect('http://localhost');
+        var port = 1337;
+        var hostName = window.location.hostname;
+        var socket = io.connect(hostName + ":" + port);
         socket.on('news', function (data) {
           console.log(data);
           socket.emit('my other event', { my: 'data' });
