finish adding nodemon, separating code and a start script

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-      asd
+      <div id="state"></div>
+      <img src="public/favicon.ico" className="App-logo" alt="logo" />
+
+      </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
 
       <script>
         var port = 1337;
         var hostName = window.location.hostname;
-        var socket = io.connect(hostName + ":" + port);
-        socket.on('news', function (data) {
+        var socket = io.connect(hostName);
+        socket.on('initialized', function (data) {
           console.log(data);
-          socket.emit('my other event', { my: 'data' });
+          socket.emit('toggle');
         });
       </script>
     </body>
